--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,12 +1,12 @@
 <div class="contact">
   <h2>Contact</h2>
   <ul>
-    <li>University of Jekyll</li>
-    <li>Department of Themes</li>
-    <li>123 Main St, Anytown, USA</li>
+    <li>Dawood University of Engineering Karachi Pakistan</li>
+    <li>Computer System Engineering</li>
+    <li>Karachi, Pakistan</li>
     <li><span class="li-icon">{% include svg/pin-alt.svg %}</span><span>Foobar Hall 1.23</span></li>
-    <li><span class="li-icon">{% include svg/phone.svg %}</span><span>+1 234 567 890</span></li>
-    <li><span class="li-icon">{% include svg/mail.svg %}</span><a href="mailto:username@domain.com">username@domain.com</a></li>
-    <li><span class="li-icon">{% include svg/internet.svg %}</span><a href="https://cvless.netlify.app">https://cvless.netlify.app</a></li>
+    <li><span class="li-icon">{% include svg/phone.svg %}</span><span>+92 332 937 5723</span></li>
+    <li><span class="li-icon">{% include svg/mail.svg %}</span><a href="mailto:abdulqudoospk737@gmail.com">abdulqudoospk737@gmail.com</a></li>
+    <li><span class="li-icon">{% include svg/internet.svg %}</span><a href="https://qudosabdu.github.io">https://qudosabdu.github.io</a></li>
   </ul>
 </div>
