updated meta tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,8 @@
     {% endif %}
   </title>
 
+  <meta name="description" content="Abdul Qudoos - MERN Stack Developer. Currently working with Next.js. Check out my portfolio hosted at qudosabdu.github.io.">
+
   <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/open-color.min.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/syntax.css' | relative_url }}">
