--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-adsense-account" content="ca-pub-6328498040371879">
+
 
   <title>
     {% if page.layout == "home" %}
@@ -10,7 +12,8 @@
     {% endif %}
   </title>
 
-  <meta name="description" content="Abdul Qudoos - MERN Stack Developer. Currently working with Next.js. Check out my portfolio hosted at qudosabdu.github.io.">
+  <meta name="description"
+    content="Abdul Qudoos - MERN Stack Developer. Currently working with React.js. Check out my portfolio hosted at qudosabdu.github.io.">
 
   <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/open-color.min.css' | relative_url }}">
@@ -23,4 +26,6 @@
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ 'atom.xml' | relative_url }}">
 
   {% seo title=false %}
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6328498040371879"
+    crossorigin="anonymous"></script>
 </head>
