--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -28,6 +28,16 @@
     font-size: 1.25em;
   }
 
+  .fullscreen {
+
+  h1,
+  h2 {
+    color: var(--color-particles-text);
+    font-size: 20px;
+  }
+}
+
+
   .particles-title {
     font-size: 3.5em;
   }
